# phd-school

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  check_files.sh  download_data.sh  pyproject.toml
home/notebooks/: challenge.ipynb  mnist-with-sklearn.ipynb
home/notebooks_solution/: 1-mnist-with-sklearn.ipynb  3-solve-sudoku.ipynb  create-realistic-dataset.ipynb  evaluate-model.ipynb  model.py  model_wrapper.py  model_wrapper_complete.py  wrap-model.ipynb
home/sample_data/: notes.txt
notebooks/: mnist-with-sklearn.ipynb  training.ipynb
scripts/: app.py  train.py
src/phd_school/dataset/: __init__.py  printed_mnist.py  sudoku_digits.py
src/phd_school/models/: lightning.py  model_wrapper_complete.py  models.py
src/phd_school/utils/: classifier.py  data_preprocessing.py  drawing.py
