[tool.poetry]
name = "phd-school"
version = "0.1.0"
description = ""
authors = ["Matteo Barbieri <matteo.a.barbieri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.67.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
jupyterlab = "^4.3.4"
opencv-python = "^4.10.0.84"
scikit-image = "^0.25.0"
ipywidgets = "^8.1.5"
lightning = "^2.5.0.post0"
timm = "^1.0.12"
torchaudio = {version = "^2.5.1+cu124", source = "pytorch"}
torch = {version = "^2.5.1+cu124", source = "pytorch"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pycairo = "^1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
